# gatelate

./: .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/data/: airline_monthly_history.json  airline_ytd_current.json  airport_arrival_annual_history.json  airport_arrival_current_month.json  airport_arrival_ytd_current.json  airport_carrier_matrix.json  airport_departure_annual_history.json  airport_departure_current_month.json  airport_departure_ytd_current.json  carrier_delay_causes.json  carrier_monthly.json  carrier_seasonal.json  carrier_size_reliability.json  data_meta.json
apps/web/src/: App.tsx  data.ts  styles.css  types.ts  useDataset.ts
apps/web/src/components/: Footer.tsx  Leaderboard.tsx  Nav.tsx  SourceNote.tsx  YearRangeFilter.tsx
apps/web/src/pages/: Airlines.tsx  Airports.tsx  Carriers.tsx  Home.tsx  Insights.tsx  Methodology.tsx
config/: source_pages.json
scripts/: build_analyses.py  emit_data_meta.py  reconcile_sources.py  validate_data.py
scripts/etl/: build_curated.py  curate_carrier_data.py  curate_v1_datasets.py  fetch_bts_summary_tables.py  fetch_transtats_monthly_raw.py  inspect_workbooks.py
tests/: conftest.py  test_airport_parser.py  test_analysis_json.py  test_carrier_aggregation.py  test_data_validation.py  test_json_parity.py
