[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-reliability-explorer-data"
version = "0.1.0"
description = "ETL and data utilities for flight-reliability-explorer"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "duckdb>=1.1.3",
  "httpx>=0.28.1",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
  "rich>=13.9.4",
  "tenacity>=9.0.0",
  "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[tool.setuptools]
py-modules = []
